@@ -104,6 +104,14 @@ INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`
 DELETE FROM `creature_loot_template` WHERE `Entry`=18131 AND `Item`=24468;
 INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (18131, 24468, 30, 1, 'Marshfang Slicer - Burstcap Mushroom');
 
+-- Telaar Supply Crate (Quest: The Ravaged Caravan (Id: 9956))
+-- Warmaul Warlock
+DELETE FROM `creature_loot_template` WHERE `Entry`=18037 AND `Item`=25647;
+INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (18037, 25647, 28, 1, 'Warmaul Warlock - Telaar Supply Crate');
+-- Warmaul Brute
+DELETE FROM `creature_loot_template` WHERE `Entry`=18065 AND `Item`=25647;
+INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (18065, 25647, 28, 1, 'Warmaul Brute - Telaar Supply Crate');
+
 -- Salvaged Wood (Quest: I Work... For the Horde! (Id: 10086))
 -- Bonechewer Scavenger
 DELETE FROM `creature_loot_template` WHERE `Entry`=18952 AND `Item`=25911;
